# MFiX-CFD-DEM

./: CMakeLists.txt  PKG-INFO  pyproject.toml
doc/html/: about.html  faq.html  genindex.html  icons.html  index.html  mfix_on_joule.html  objects.inv  output_format_table.html  queue.html  search.html  searchindex.js  template_icons.html  user_interface_reference.html
legacy_tests/adiabaticFlame/: usr_rates.f
legacy_tests/chi-scheme/: usr_rates.f
legacy_tests/conduction2/: solve_energy_eq.f
legacy_tests/drying/: usr_rates.f
legacy_tests/ozone/: usr_rates.f
legacy_tests/phase_change/: usr_rates.f
legacy_tutorials/DEM_Wall_HT/: usr1_des.f
legacy_tutorials/Solvent_Absorption/: usr0.f  usr1.f  usr_init_namelist.f  usr_mod.f  usr_properties.f  usr_rates.f
legacy_tutorials/SpoutedBedCombustor/: usr_rates.f
legacy_tutorials/reactor1a/: usr_rates.f
legacy_tutorials/reactor1b/: rrates.f
legacy_tutorials/usr_drag/: usr_drag.f
mfixgui/: Makefile  __main__.py  advanced.py  advanced_keys.py  animations.py  bcs.py  bug_report.py  build_mfixsolver.py  chemistry.py  constants.py  dashboard.py  default_values.py  expand_template.py  fluid_handler.py  geometry_handler.py  graphic_tabs.py  gui.py  ics.py  interpreter.py  iss.py  job.py  keyframe.py  locate_keyword.py  logger.py  main.py  mesh.py  mesh_stats_viewer.py  model_setup.py  monitors.py  namelistparser.py  numerics.py  output.py  project.py  project_manager.py  pss.py  pymfix.py  pymfix_webserver.py  reaction_parser.py  resources.py  resources.qrc  (+15 more)
mfixgui/colormaps/: color_maps.py
mfixgui/console/: console_printer.py  message_dialog.py  message_scanner.py  solver_message.py
mfixgui/editor/: __main__.py  code_editor.py  completer.py  constants.py  csv_editor.py  csvwidget.py  ide_widget.py  syntax_highlighter.py  tree.py
mfixgui/file_menu/: __init__.py  about_widget.py  help_widget.py  new_project_widget.py  open_widget.py  settings_widget.py
mfixgui/gsp_sample_data/: 2x4mmEllipsoid.stl  Cube.step  Hexagonal_prism.stl  Octahedron.stl  README.md  bone.stl  cliff.stl  cylinder.stl  h10mmCone.stl  llu_rock.stl  r4h16.stl  r4h5dot3.stl  simplified_mesh.stl  sq2stl.stl
mfixgui/output_templates/: detailed  ppo  standard
mfixgui/particle_props/: particle_dialog.py  particle_props.json  utils.py
mfixgui/solver/: manager.py  process.py
mfixgui/tools/: __init__.py  cantera_poly.py  collect_tutorial_info.py  gsp_generator.py  monitor_reader.py  namelist.py  particle_seeder.py  paths.py  procedural_stl.py  qt.py  reaction_parser_test_data.py  read_atomic.py  read_chemkin.py  read_mesh_stats.py  read_thermo.py  simpleeval.py  simpleeval_wrapper.py  sqp_funcs.py  template_data.json  thumbnail.py  util.py
mfixgui/uifiles/: about.ui  boundary_conditions.ui  build_popup.ui  chemistry.ui  create_movie.ui  dashboard.ui  distributed.ui  fluid.ui  geometry.ui  graphics_tab.ui  gui.ui  help.ui  initial_conditions.ui  internal_surfaces.ui  keyframe.ui  mesh.ui  message_dialog.ui  model_setup.ui  modeler_sidebar.ui  monitors.ui  new_project.ui  numerics.ui  output.ui  output_selection_popup.ui  psd_popup.ui  ramp_popup.ui  regions.ui  results_viewer_sidebar.ui  run.ui  run_popup.ui  settings.ui  solids.ui  species_popup.ui
mfixgui/vtk_widgets/: __init__.py  base.py  colormap_dialog.py  constants.py  dialogs.py  geometry_engine.py  histogram_viewer.py  mesher.py  modeler.py  pvd_reader.py  results_viewer.py  tools.py
mfixgui/widgets/: atomic.pickle  base.py  build_popup.py  burcat.pickle  gs_designer.py  new_project_popup.py  nodeworks.py  output_selection_popup.py  parameter_dialog.py  plot_window.py  psd_popup.py  ramp_popup.py  regions.py  regions_popup.py  run_popup.py  species_popup.py  sq_designer.py
model/: DGTSV.f  allocate_arrays.f  bc_mod.f  bc_theta.f  calc_coeff.f  calc_dif_g.f  calc_e.f  calc_grbdry.f  calc_k_cp.f  calc_k_g.f  calc_mu_g.f  calc_mu_s.f  check_bqend.f  check_convergence.f  check_data_30.f  check_mod.f  cn_extrapol.f  constant_mod.f  conv_dif_v_g.f  conv_dif_v_s.f  conv_dif_w_g.f  conv_dif_w_s.f  dbg_mod.f  deprecated.f  display_resid.f  drag_gs.f  drag_ss.f  eos_mod.f  error_manager_mod.f  etime.c  exit.f  flow_to_vel.f  fpe_mod.f  functions_mod.f  funits_mod.f  geometry_mod.f  get_is.f  get_ps.f  get_smass.f  gfortran_init.c  (+93 more)
model/GhdTheory/: adjust_eps_ghd.f  calc_d_ghd.f  cooling_rate.f  ghdmassflux.f  ordinary_diff.f
model/cartesian_grid/: CG_set_outflow.f  calc_vort_out.f  cartesian_grid_init_namelist.f  check_data_cartesian.f  cut_cell_preprocessing.f  define_quadrics.f  get_connectivity.f  get_cut_cell_flags.f  get_cut_cell_volume_area.f  get_delh.f  get_stl_data.f  intersect.f  pvd_mod.f  quadric_mod.f  stl_mod.f  vtk_mod.f  vtk_out.f
model/check_data/: check_axis.f  check_bc_dem.f  check_bc_geometry.f  check_bc_inflow.f  check_bc_outflow.f  check_bc_pic.f  check_bc_walls.f  check_boundary_conditions.f  check_chemical_rxns.f  check_dmp_prereqs.f  check_gas_phase.f  check_geometry.f  check_geometry_prereqs.f  check_ic_common_discrete.f  check_ic_dem.f  check_ic_mppic.f  check_initial_conditions.f  check_internal_surfaces.f  check_numerics.f  check_odepack_stiff_chem.f  check_output_control.f  check_point_sources.f  check_run_control.f  check_solids_common_all.f  check_solids_common_discrete.f  check_solids_continuum.f  check_solids_dem.f  check_solids_model_prereqs.f  check_solids_mppic.f  check_solids_phases.f
model/chem/: calc_arrhenius_rrates.f  calc_arrhenius_rrates_des.f  stiff_chem.f90  stiff_chem_dpm.f90  stiff_chem_mod.f  stiff_chem_tfm.f90
model/des/: calc_collision_wall_mod.f  calc_des_2fluid.f  calc_drag_des.f  calc_epg_des.f  calc_force_dem.f  calc_gamma_des.f  calc_grad_des.f  calc_interp_weights.f  calc_pg_grad.f  calc_rrates_des.f  calc_thermo_des.f  cfassign.f  cffctowall.f  cfnewvalues.f  cfrelvel.f  check_cell_movement.f  comp_mean_fields1.f  derived_types_mod.f  des_allocate_mod.f  des_functions.f  des_granular_temperature.f  des_init_arrays.f  des_init_namelist.f  des_psd_mod.f  des_reaction_model.f  des_rxns_mod.f  (+65 more)
queue_templates/: gridengine  slurm
(+455 files in other folders)
